copied some 1.19.2-1.2.0 changes
Took 1 hour 8 minutes